Fix menu on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,7 +71,10 @@ p {
   
   padding:20px 0px 0px 0px;
 }
-
+.head-float{
+  position:absolute;
+  z-index:10;width:100%;
+}
 #logo {
   float: left;
   margin-right: 10px;
@@ -205,7 +208,7 @@ aside {
       position: relative;
       z-index: 9;
     }
-
+    
     .carousel-control {
       height: 80px;
       margin-top: 0;
@@ -218,7 +221,8 @@ aside {
     .carousel .item {
       height: 450px;
     }
-    .carousel img {
+    
+    .carousel img, {
       position: absolute;
       top: 0;
       left: 0;
